feat(api): 채용공고 상세페이지기능 추가